# bat-desktop-rs

./: Cargo.toml  README.md  build.rs
src/: input.rs  lib.rs  main.rs  meow.c  meow_fft.h  mono.rs  pixmap.rs  test1.rs
src/pixmap/: fft_meow.rs  fft_rustfft.rs  lib.rs
