[package]
name = "bat_desktop_rs"
version = "0.2.2"
edition = "2021"

[dependencies]
"realfft" = "3.4.0"
"colorsys" = "0.6.7"
"rgb565" = "0.1.3"
"memmap2" = "0.9.5"

eframe = {features = [
  "default",
  "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
 ] , version = "0.30.0"}
image = "0.25.5"
ecolor = "0.30.0"

env_logger = { version = "0.11", default-features = false, features = [
  "auto-color",
  "humantime",
] }

"rayon" = "1.10.0"

[features]
default = ["mmap"]
mmap = []

