[package]
name = "bat_desktop_rs"
version = "0.2.3"
edition = "2021"

[dependencies]
"rustfft" = "6.2"
"memmap2" = "0.9"

eframe = {features = [
  "default",
 ] , version = "0.31.0"}
image = { default-features = false, version = "0.25.5" }

"rayon" = "1.10"

[features]
default = ["mmap"]
mmap = []

#[profile.release]
#debug = true

[[bin]]
name = "test1"
path = "src/test1.rs"
